--- a/I2A.vcxproj.filters
+++ b/I2A.vcxproj.filters
@@ -19,5 +19,20 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="number.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="oj.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="poj1365.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="poj1811.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="poj2034.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
